--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "backend",
+  "name": "interview_master_backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "assignment",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "priyanka",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.5.2",
